--- a/phylogenize_app/templates/index.html
+++ b/phylogenize_app/templates/index.html
@@ -56,6 +56,9 @@
       {% for message in messages %}
       {{ message }} <br>
       {% endfor %}
+			{% for error in form.errors %}
+			{{ error }}
+			{% endfor %}
     </div>
   {% endif %}
 {% endwith %}
@@ -67,8 +70,8 @@
     class="form-horizontal"
     enctype="multipart/form-data"
     novalidate>
-
 			{{ form.hidden_tag() }}
+
 			<div class="form-row silentform">
 				<div class="col-md-4 silentform">
 					{{ form_entry(form.abundances, "Tab-separated values. Rows should be
@@ -94,9 +97,7 @@
 			</div>
 			<div class="form-row">
 				<div class="col-md-12">
-          {% if not config['RECAPTCHA_DISABLE'] %}
   					{{ form.recaptcha }}
-          {% endif %}
 					<input type="submit" value="Submit" class="btn btn-primary" formmethod="post" />
 				</div>
 			</div>
